Bug 470902 - Window decoration settings dialogs are broken
Summary: Window decoration settings dialogs are broken
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwindecoration (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
: 470907 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-06-11 12:26 UTC by Nicolas Fella
Modified: 2023-06-14 12:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (41.94 KB, image/png)
2023-06-11 12:27 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-06-11 12:26:16 UTC
STEPS TO REPRODUCE
1. Open window decorations KCM
2. For Breeze or Oxygen click on Edit button

OBSERVED RESULT
Dialog opens with tiny size, making it larger shows a broken layout

EXPECTED RESULT
It looks normal

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 6.5.1
Comment 1 Nicolas Fella 2023-06-11 12:27:05 UTC
Created attachment 159597 [details]
Screenshot
Comment 2 Patrick Silva 2023-06-11 15:04:07 UTC
*** Bug 470907 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2023-06-13 18:56:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4179
Comment 4 Vlad Zahorodnii 2023-06-14 12:46:03 UTC
Git commit bc6276018628711006904def1cb2310aa6579041 by Vlad Zahorodnii, on behalf of Nicolas Fella.
Committed on 14/06/2023 at 12:37.
Pushed by vladz into branch 'master'.

kcms/decoration: Use KCMultiDialog to open decoration kcms

Now that decoration configs are separate plugins we can plug those into KCMultiDialog instead of hand-rolling it ourselves

As a nice side-effect this should allow to implement the decoration config in QML

M  +6    -34   src/kcms/decoration/declarative-plugin/previewbridge.cpp

https://invent.kde.org/plasma/kwin/-/commit/bc6276018628711006904def1cb2310aa6579041