kcms/decoration: Use KCMultiDialog to open decoration kcms

Now that decoration configs are separate plugins we can plug those into KCMultiDialog instead of hand-rolling it ourselves

As a nice side-effect this should allow to implement the decoration config in QML

BUG: 470902